--- a/Lab1/index.qmd
+++ b/Lab1/index.qmd
@@ -26,7 +26,7 @@ This is where the question text would go.
 -->
 ```
 
-Welcome to the first S2S lab! The contents of these labs are based on the textbook [***Probability and Statistics with R***](https://www-taylorfrancis-com.ezproxy1.lib.gla.ac.uk/reader/read-online/59b6523e-f921-4599-8d9e-20af1058199a/book/epub?context=ubx){target="_blank"} by Ugarte, Militino and Arnholt. Reference will be made to this textbook throughout the labs and it's a great place to find further details and examples of the sort of things we'll be looking at.
+Welcome to the first S2S lab! The contents of these labs are based on the textbook [***Probability and Statistics with R***](https://read.kortext.com/reader/pdf/92741/1){target="_blank"} by Ugarte, Militino and Arnholt. Reference will be made to this textbook throughout the labs and it's a great place to find further details and examples of the sort of things we'll be looking at.
 
 ```{r PASWR2-image, echo=FALSE, fig.align='center', out.width='40%'}
 include_graphics("Images/PASWR2.png")
